--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ h1{
   
   justify-content: center;
   
-  height: 30px:
-  border: 3px solid green;
-  border-radius: 20%;
+  height: 30 px;
+  border: 3 px solid green;
+  border-radius: 20 %;
   
 }
 .btn:hover{
